fixed mobile layout issues 1

--- a/css/css.css
+++ b/css/css.css
@@ -480,3 +480,21 @@ li {
 
 
 
+/* Media Query for Mobile Vertical */
+@media only screen and (max-width: 600px) {
+    .col-md-6 {
+        margin-bottom: 20px;
+    }
+    .col-md-4 {
+        margin-bottom: 20px;
+    }
+    .col-md-3 {
+        margin-bottom: 20px;
+
+    }
+
+}
+
+
+
+
